--- a/src/app/componente/navbar/navbar.component.html
+++ b/src/app/componente/navbar/navbar.component.html
@@ -1,5 +1,6 @@
 <nav class="navbar bg-dark border-bottom border-bottom-dark" data-bs-theme="dark">
     <div class= "cotainer-fluid">
+        <img [src]="imagen" width="40" height="40">
         <a class="navbar-brand" href="#">{{titulo}}</a> 
     </div>  
 </nav>
