--- a/src/app/componente/dashboard/dashboard.component.html
+++ b/src/app/componente/dashboard/dashboard.component.html
@@ -1,11 +1,22 @@
 <!-- container-->
-
+<br>
+<br>
 <div class="container">
-    <h1>{{titulo}}</h1>
+    <h2>{{titulo}}</h2>
     <br>
     <p>{{contenido}}</p>
     <br>
     <ul><b>Alumno:</b>  {{alumnos}}</ul>
-    <ul></ul>
+    <br>
+    <hr>
+    <br>
+    <h2>{{tituloPB}}</h2>
+    <img [src]="imagen" width="60%">
+    <br>
+    <br>
+    <br>
+    <br>
+
+
     
 </div>
