--- a/src/app/componente/dashboard/dashboard.component.html
+++ b/src/app/componente/dashboard/dashboard.component.html
@@ -7,15 +7,24 @@
     <p>{{contenido}}</p>
     <br>
     <ul><b>Alumno:</b>  {{alumnos}}</ul>
+    <ul><b>Profesor:</b>  {{profesor}}</ul>
     <br>
     <hr>
     <br>
     <h2>{{tituloPB}}</h2>
     <img [src]="imagen" width="60%">
     <br>
+    <hr>
     <br>
+    <h2>{{tituloEB}}</h2>
     <br>
+    <p>{{textoEB}}</p>
+    <button (click)="cambiartexto()">Boton</button>
     <br>
+    <hr>
+    <br>
+
+
 
 
     
